[package]
name = "rust_cget"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11"
tokio = { version = "1", features = ["full"] }
url = "2.2"
indicatif = "0.15"
clap = "2.26.0"
dirs = "3.0"

